--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
     "node-fetch": "^3.3.2"
   }
